# 1INF27

2025-2/Clase01/nqueen/: main.cpp
2025-2/Clase02/KochCurve/: CMakeLists.txt  main.cpp
2025-2/Clase02/knapsack/: main.cpp
2025-2/Clase02/recursividad_archivos/: main.cpp
2025-2/Clase03/Robot/: CMakeLists.txt
2025-2/Clase05/IntersectionPointTwoLists/: CMakeLists.txt
2025-2/Clase05/LinkedList/: main.cpp
2025-2/Clase05/RussianRoulette/: CMakeLists.txt  main.cpp
2025-2/Clase05/RussianRoulette/src/: BibliotecaLista.hpp  RussianRoulette.cpp  RussianRoulette.hpp  Utils.hpp
2025-2/Clase06/HanoiPilas/: CMakeLists.txt
2025-2/Clase07/ColaPrioridad/: CMakeLists.txt  main.cpp
2025-2/Clase09/Contagios/: CMakeLists.txt  main.cpp
2025-2/Clase09/DatosSensibles/: CMakeLists.txt  main.cpp
2025-2/Clase09/DivideVenceras/: CMakeLists.txt  main.cpp
2025-2/Clase09/MergeSort/: CMakeLists.txt  main.cpp
2025-2/Clase09/Oppenheimer/: CMakeLists.txt  main.cpp
2025-2/Clase09/Pilas/: CMakeLists.txt  main.cpp
2025-2/Clase09/Pilas/src/: Funciones.cpp  Funciones.hpp  FuncionesPila.cpp  FuncionesPila.hpp  Utils.hpp
2025-2/Clase09/RobotPerforador/: CMakeLists.txt  main.cpp
2025-2/Clase10/ArbolesBinarios/: CMakeLists.txt  main.cpp
2025-2/Clase10/ArbolesBinarios/src/: FuncionesArbol.cpp  FuncionesArbol.hpp  Utils.hpp
2025-2/Clase10/ArbolesBinarios/src/BibliotecaArboles/: ArbolBinario.hpp  NodoArbol.hpp
2025-2/Clase10/ArbolesBinariosRecNiveles/: CMakeLists.txt  main.cpp
2025-2/Clase10/ArbolesBinariosRecNiveles/src/: FuncionesArbol.cpp  FuncionesArbol.hpp  FuncionesCola.hpp
2025-2/Clase10/ArbolesBinariosRecNiveles/src/BibliotecaArboles/: ElementoArbol.hpp
2025-2/Clase11/2022-2-P1-Cromosomas/: CMakeLists.txt  main.cpp
2025-2/Clase11/2022-2-P1-Cromosomas/src/: Funciones.cpp  Funciones.hpp  FuncionesArbol.cpp  FuncionesArbol.hpp  FuncionesCola.cpp  Utils.hpp
2025-2/Clase11/2022-2-P1-Cromosomas/src/BibliotecaArboles/: ElementoArbol.hpp
2025-2/Clase11/2022-2-P1-Cromosomas/src/BibliotecaCola/: Cola.hpp  NodoCola.hpp
2025-2/Clase11/ArbolBinarioBusqueda/: main.cpp
2025-2/Clase11/DiccionarioAB_Lab4/: CMakeLists.txt  main.cpp
2025-2/Clase11/DiccionarioAB_Lab4/BibliotecaArbolBinario/: ArbolBinario.h  ElementoArbolBinario.h  NodoArbolBinario.h  funcionesArbolBinario.cpp  funcionesArbolBinario.h
2025-2/Clase12/ABB_Despacha/ArbolBinarioBusqueda/: CMakeLists.txt  main.cpp
2025-2/Clase12/ABB_Despacha/ArbolBinarioBusqueda/BibliotecaArbolBinarioBusqueda/: ArbolBinarioBusqueda.h  ElementoArbolBinarioBusqueda.h  NodoArbolBinarioBusqueda.h  funcionesArbolBinarioBusqueda.cpp  funcionesArbolBinarioBusqueda.h
2025-2/Clase12/ArbolBinarioBusqueda/: main.cpp
2025-2/Clase12/Lab4_CumulosMinimos/ArbolBinarioColaYPila/: CMakeLists.txt  main.cpp
2025-2/Clase12/Lab4_CumulosMinimos/ArbolBinarioColaYPila/BibliotecaArbolBinario/: ArbolBinario.h  ElementoArbolBinario.h  NodoArbolBinario.h  funcionesArbolBinario.cpp  funcionesArbolBinario.h
2025-2/Clase12/Lab4_CumulosMinimos/ArbolBinarioColaYPila/BibliotecaCola/: Cola.h  NodoCola.h  funcionesCola.cpp  funcionesCola.h
2025-2/Clase12/Lab4_CumulosMinimos/ArbolBinarioColaYPila/BibliotecaPila/: ElementoPila.h  NodoPila.h  funcionesPila.cpp  funcionesPila.h
2025-2/Clase13/CuatroColores/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
2025-2/Clase13/CuatroColores/BibliotecaLista/: ElementoLista.h  Lista.h  funcionesLista.cpp  funcionesLista.h
2025-2/Clase13/Dijkstra/: CMakeLists.txt  main.cpp
2025-2/Clase13/Dijkstra/BibliotecaLista/: ElementoLista.h  NodoLista.h  funcionesLista.cpp  funcionesLista.h
2025-2/Clase13/ListasDeAdyacencia/: CMakeLists.txt  main.cpp
2025-2/Clase13/ListasDeAdyacencia/BibliotecaLista/: ElementoLista.h  Lista.h  funcionesLista.cpp  funcionesLista.h
2026-1/Clase03/Hanoi/: CMakeLists.txt  main.cpp
2026-1/Clase03/Robot/: main.cpp
2026-1/Clase03/SierpinskyTriangle/: CMakeLists.txt
2026-1/Clase03/recursividad_archivos/: CMakeLists.txt  main.cpp
2026-1/Clase04/Sol_Recursion_2025-2/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
2026-1/Clase05/IntersectionPointTwoLists/: CMakeLists.txt  main.cpp
2026-1/Clase05/LinkedList/: CMakeLists.txt  main.cpp
2026-1/Clase06/Stack/: main.cpp
2026-1/Clase07/HanoiPilas/: main.cpp
2026-1/Clase07/PilasLaberinto/: CMakeLists.txt  main.cpp
2026-1/Clase07/PilasLaberinto/src/: FuncionesLaberinto.cpp  FuncionesLista.cpp  Nodo.hpp
2026-1/Clase08/Colas-Ex125-2/: CMakeLists.txt
2026-1/Clase08/FusionarPilas/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
2026-1/Clase08/FusionarPilas/BibliotecaPila/: ElementoPila.h  funcionesPila.cpp  funcionesPila.h
2026-1/Clase08/OrdenaColas/: CMakeLists.txt  main.cpp
2026-1/Clase08/Queues/: CMakeLists.txt
2026-1/Clase08/ReiniciaCola/: CMakeLists.txt  main.cpp
2026-1/Clase08/ReiniciaCola/Biblioteca/: Cola.h  Elemento.h  ElementoCola.h  NodoCola.h  NodoPila.h  Pila.h  funcionesCola.cpp  funcionesCola.h  funcionesPila.cpp  funcionesPila.h
Asesorias/Asesoria1/KochCurve/: main.cpp
Asesorias/Asesoria1/knapsack/: main.cpp
Clase01/nqueen/: CMakeLists.txt
Clase02/SierpinskyTriangle/: main.cpp
Clase02/knapsack/: CMakeLists.txt
Clase03/Robot/: main.cpp
Clase04/LinkedList/: main.cpp
Clase04/LinkedList/src/: BibliotecaLista.cpp  BibliotecaLista.hpp  Elemento.hpp
Clase05/IntersectionPointTwoLists/: main.cpp
Clase05/IntersectionPointTwoLists/src/: BibliotecaLista.hpp  NodoLista.hpp
Clase05/LinkedList/src/: BibliotecaLista.cpp  BibliotecaLista.hpp
Clase05/RussianRoulette/src/: BibliotecaLista.cpp  NodoLista.hpp
Clase05/Stack/: CMakeLists.txt
Clase05/Stack/src/: Utils.hpp
Clase06/HanoiPilas/: main.cpp
Clase06/HanoiPilas/src/: Hanoi.cpp  Pila.cpp
Clase06/Queues/: main.cpp
Clase06/Queues/src/: Cola.cpp  Utils.hpp
Clase08/PilasLaberinto/: main.cpp
EjerciciosPasados/2025-1/L2/CuadrigasFinal/: CMakeLists.txt  main.cpp
EjerciciosPasados/2025-1/L2/CuadrigasFinal/BibliotecaLista/: ElementoLista.h  Lista.h  NodoLista.h  funcionesLista.cpp  funcionesLista.h
(+92 files in other folders)
